# backend/src/controllers/user.controller.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from "express";
-import { validateRegister, validateLogin } from "../util/validation";
+import { validateUserRegister, validateUserLogin } from "../util/validation";
 import jwt from "jsonwebtoken";
 import prisma from "../prisma/config";
 import bcrypt from "bcrypt";
@@ -8,10 +8,26 @@ export const login = async (req: Request, res: Response) => {
   try {
     const { email, password } = req.body;
 
-    const { error } = validateLogin({ email, password });
+    const { error } = validateUserLogin({ email, password });
     if (error) return res.status(400).json({ error: error.details[0].message });
 
-    console.log(email, password);
+    let user = await prisma.user.findUnique({ where: { email } });
+
+    if (!user)
+      return res.status(401).json({
+        error: "Invalid credentials",
+      });
+
+    let passwordMatch = await bcrypt.compare(password, user.password);
+
+    if (!passwordMatch)
+      return res.status(401).json({
+        error: "Invalid credentials",
+      });
+
+    let token = jwt.sign({ email }, process.env.JWT_KEY!.trim());
+
+    return res.status(200).json({ token });
   } catch (error) {
     return res.status(500).json({ error: "Error", stackTrace: error });
   }
@@ -21,7 +37,7 @@ export const register = async (req: Request, res: Response) => {
   try {
     const { fullname, email, phone, password } = req.body;
 
-    const { error } = validateRegister({ fullname, email, phone, password });
+    const { error } = validateUserRegister({ fullname, email, phone, password });
     if (error) return res.status(400).json({ error: error.details[0].message });
 
     let hashedPassword = await bcrypt.hash(password, 10);
@@ -37,7 +53,6 @@ export const register = async (req: Request, res: Response) => {
 
     let token = jwt.sign({ email }, process.env.JWT_KEY!.trim());
     return res.status(201).json({ token });
-    
   } catch (error) {
     return res.status(500).json({ error: "Error", stackTrace: error });
   }
