# backend/src/routers/user.router.ts
@@ -1,10 +1,11 @@
 import { Router } from "express";
-import { login, me } from "../controllers/user.controller";
+import { login, me, register } from "../controllers/user.controller";
 import authMiddleware from "../middlewares/auth.middleware";
 
 const userRouter = Router();
 
 userRouter.post("/login", login);
-userRouter.get("/me", authMiddleware, me)
+userRouter.post("/register", register)
+userRouter.get("/me", authMiddleware, me);
 
 export default userRouter;
