# backend/src/util/validation.ts
@@ -1,6 +1,6 @@
 import Joi from "joi";
 
-export const validateRegister = (data: any) => {
+export const validateUserRegister = (data: any) => {
   const schema = Joi.object({
     fullname: Joi.string().min(6).max(255).required(),
     email: Joi.string().email(),
@@ -11,7 +11,7 @@ export const validateRegister = (data: any) => {
   return schema.validate(data);
 };
 
-export const validateLogin = (data: any) => {
+export const validateUserLogin = (data: any) => {
   const schema = Joi.object({
     email: Joi.string().email(),
     password: Joi.string().min(6).max(100).required(),
@@ -20,3 +20,24 @@ export const validateLogin = (data: any) => {
   return schema.validate(data);
 };
 
+export const validateEmployeeAdd = (data: any) => {
+  const schema = Joi.object({
+    fullname: Joi.string().min(6).max(255).required(),
+    email: Joi.string().email(),
+    phone: Joi.string().min(10).max(10).required(),
+    nationalId: Joi.string().min(16).max(16).required(),
+    password: Joi.string().min(6).max(100).required(),
+  });
+
+  return schema.validate(data);
+};
+
+export const validateLaptopAdd = (data: any) => {
+  const schema = Joi.object({
+    name: Joi.string().min(6).max(255).required(),
+    brand: Joi.string().min(6).max(255).required(),
+    price: Joi.number().required(),
+    model: Joi.string().min(6).max(255).required(),
+  });
+  return schema.validate(data);
+};
